--- a/style.css
+++ b/style.css
@@ -1,21 +1,5 @@
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-#FirstPageImage1{
-  background-image:url('https://images.freeimages.com/images/small-previews/2f9/circuit-board-texture-2-1184404.jpg');
+#LandingImage{
+  background-image:url('https://media.istockphoto.com/photos/battery-supply-concept-picture-id866599918?k=20&m=866599918&s=612x612&w=0&h=RQQJPF-MgasY9d775KCJaAWEawMfsUApSe-gOQvow48=');
   background-size:cover;
   background-position:center;
   height:100vh;
@@ -25,7 +9,91 @@
   align-items:center;
   text-align:center;
   padding:0 20px;
+}
 
+#LandingImage h1{
+  font-size:50px;
+  line-height:1.2;
+}
+
+td {
+  font-size: 20px
+}
+.row p {
+  font-size:20px;
+}
+p {
+  font-size:30px;
+}
+
+.mydiv {
+  border: 5px solid #555;
+}
+table img {
+  border: 5px solid #555;
+}
+#LandingImage p{
+  font-size:20px;
+}
+
+#LandingImage .button{
+  font-size:18px;
+  text-decoration:none;
+  color:#000000;
+  border:#000000 1px solid;
+  padding:10px 20px;
+  border-radius:10px;
+  margin-top:20px;
+}
+
+#LandingImage .button:hover{
+  background:#ffffff;
+  color:rgb(0, 0, 0);
+}
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+.topnav a {
+  float: center;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#FirstPageImage1{
+
+}
+
+.mydiv {
+  padding: 40px 40px 40px 40px
+}
+.photo {
+  width:200px;
+  height:200px;
+}
+
+.column {
+  float: left;
+  width: 20%;
+  padding: 10px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.mybottomheader {
+  text-align: center;
 }
 #FirstPageImage1 h1{
   font-size:50px;
@@ -49,4 +117,13 @@
 #FirstPageImage1 .button:hover{
   background:#ffffff;
   color:rgb(0, 0, 0);
+}
+#TestImage3 h1{
+  font-size:50px;
+  line-height:1.2;
+  float: right;
+}
+
+.mybottomheader {
+  font-size: 20px
 }
