--- a/style.css
+++ b/style.css
@@ -16,6 +16,18 @@
   line-height:1.2;
 }
 
+#MissionImage{
+  background-image:url('https://media.istockphoto.com/photos/battery-supply-concept-picture-id866599918?k=20&m=866599918&s=612x612&w=0&h=RQQJPF-MgasY9d775KCJaAWEawMfsUApSe-gOQvow48=');
+  background-size:cover;
+  background-position:center;
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:0 20px;
+}
 td {
   font-size: 20px
 }
@@ -88,6 +100,13 @@ table img {
   font-size:20px;
   color:#000000;
 }
+.sponsordiv td{
+  border:#000000 2px solid;
+  padding: 20px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size:20px;
+  color:#000000;
+}
 .photo {
   width:200px;
   height:200px;
@@ -95,6 +114,10 @@ table img {
 .phototeam {
   width:200px;
   height:200px;
+}
+.photosponsor {
+  width:300px;
+  height:300px;
 }
 
 .column {
