--- a/style.css
+++ b/style.css
@@ -16,11 +16,21 @@
   line-height:1.2;
 }
 
+.missiondiv{
+  text-align:center;
+}
+.missiondiv header{
+  font-size: 40px;
+}
+.missiondiv p{
+  font-size: 20px;
+  padding: 20px 20px 20px 20px;
+}
 #MissionImage{
-  background-image:url('https://media.istockphoto.com/photos/battery-supply-concept-picture-id866599918?k=20&m=866599918&s=612x612&w=0&h=RQQJPF-MgasY9d775KCJaAWEawMfsUApSe-gOQvow48=');
-  background-size:cover;
+  background-image:url('https://media.istockphoto.com/vectors/battery-charging-vector-id1046965420?k=20&m=1046965420&s=612x612&w=0&h=_mf-WzL9TjV4ouxKNQW1gVmcdX9QqJz1RIDSDlqMCkc=');s
   background-position:center;
   height:100vh;
+  border: 10px solid #555;
   display:flex;
   flex-direction:column;
   justify-content:center;
